@@ -3,3 +3,5 @@
 - it also add the line -> 'java --module-path [path to the lib file in the javafx downloaded folder] --add-modules javafx.controls,javafx.fxml -cp bin app.MainApp'
 
 - EXample ->"java --module-path /home/jinwoo/Adithyenrepose/SmartStudentManagement/javafx-sdk-24.0.1/lib --add-modules javafx.controls,javafx.fxml -cp bin app.MainApp"
+
+java --module-path "C:\Users\Jinwoo\Downloads\openjfx-24.0.1_windows-x64_bin-sdk\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml -cp "bin" app.MainApp
